--- a/templates/communes/commune_index.html.twig
+++ b/templates/communes/commune_index.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="p-6 flex justify-between items-center">
+<div>
+
+    <div class="p-4 flex justify-between items-center">
         <div class="flex justify-center items-center">
             <svg width="27" height="27" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M31.25 14.1111V32.2778H4V14.1111L17.625 2L31.25 14.1111Z" stroke="#4B515D" stroke-width="2.14697" stroke-linejoin="round"/>
                 <path d="M4 17.139H31.25M9.29861 9.56958V32.2779M25.9514 9.56958V32.2779M14.5972 23.1946H20.6528V32.2779H14.5972V23.1946Z" stroke="#4B515D" stroke-width="2.14697" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>            
+            </svg>
             <h1 class="text-2xl font-bold mt-1 ml-2">Vue des communes</h1>
         </div>
     
@@ -28,28 +30,28 @@
     
     </div>
 
-    <div class="w-full h-5/6 flex justify-center items-center">
+    <div class="mt-2 w-full h-5/6 flex justify-center items-center">
 
-        <section class="w-9/12 p-12 border-solid border border-gray-200 bg-neutral-50 rounded-md shadow-lg">
-            <div class="mb-4 flex flex-column justify-between items-center">
-                <form method="get">
-                    <label for="order">Trier par :</label>
-                    <select id="order" name="order">
-                        <option value="">Aucun</option>
-                        <option value="asc" {% if app.request.get('order') == 'asc' %}selected{% endif %}>A-Z</option>
-                        <option value="desc" {% if app.request.get('order') == 'desc' %}selected{% endif %}>Z-A</option>
-                    </select>
-                    <label for="nom">Nom :</label>
-                    <input type="text" id="nom" name="nom" value="{{ app.request.get('nom') }}">
-
+        <section class="w-9/12 p-8 border-solid border border-gray-200 bg-neutral-50 rounded-md shadow-lg">
+            <div class="mb-4 pb-4  border-solid border-b border-gray-200">
+                <form method="get" class="flex flex-row justify-between items-center">
                     <div>
-                        <input type="submit" value="Filtrer">
-                        <button type="submit" name="reset" value="1">Réinitialiser</button>
+                        <label for="order">Trier par :</label>
+                        <select id="order" name="order" class="p-2 ml-1 text-blue-600 rounded border border-blue-300">
+                            <option value="">Aucun</option>
+                            <option value="asc" {% if app.request.get('order') == 'asc' %}selected{% endif %}>A-Z</option>
+                            <option value="desc" {% if app.request.get('order') == 'desc' %}selected{% endif %}>Z-A</option>
+                        </select>
+                    </div>
+                    <input type="text" id="nom" name="nom" placeholder="Rechercher une commune" value="{{ app.request.get('nom') }}" class="p-2 ml-1 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200">
+                    <div>
+                        <input type="submit" id="filter-button" value="Filtrer" class="mr-2 px-4 py-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200 cursor-pointer">
+                        <button type="submit" id="reset-button" name="reset" value="1" class="px-4 py-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200">Réinitialiser</button>
                     </div>
                 </form> 
             </div>
             
-            <div class="relative overflow-x-auto sm:rounded-t-lg mb-4">
+            <div class="sm:rounded-t-lg mb-4">
                 <table class="w-full text-sm text-left rtl:text-right ">
                     <thead class=" text-xs uppercase bg-gray-200  ">
                         <tr>
@@ -113,6 +115,7 @@
             </div>
         </section>
     </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
@@ -120,6 +123,33 @@
 
 
     <script>
+        document.getElementById('order').addEventListener('change', function() {
+            if (this.value) {
+                document.getElementById('filter-button').classList.remove('text-blue-600', 'border-blue-300', 'hover:bg-blue-50');
+                document.getElementById('filter-button').classList.add('text-white', 'bg-green-500', 'border-green-500');
+                localStorage.setItem('filterApplied', 'true');
+            } else {
+                document.getElementById('filter-button').classList.remove('text-white', 'bg-green-500', 'border-green-500');
+                document.getElementById('filter-button').classList.add('text-blue-600', 'border-blue-300', 'hover:bg-blue-50');
+                localStorage.setItem('filterApplied', 'false');
+            }
+        });
+    
+        document.getElementById('reset-button').addEventListener('click', function() {
+            document.getElementById('filter-button').classList.remove('text-white', 'bg-green-500', 'border-green-500');
+            document.getElementById('filter-button').classList.add('text-blue-600', 'border-blue-300', 'hover:bg-blue-50');
+            this.classList.remove('text-white', 'bg-red-500', 'border-red-500', 'hover:bg-blue-50');
+            this.classList.add('text-blue-600', 'border-blue-300', 'hover:bg-blue-50');
+            localStorage.setItem('filterApplied', 'false');
+        });
+    
+        window.onload = function() {
+            if (localStorage.getItem('filterApplied') === 'true') {
+                document.getElementById('reset-button').classList.remove('text-blue-600', 'border-blue-300', 'hover:bg-blue-50');
+                document.getElementById('reset-button').classList.add('text-red-500', 'bg-red-100', 'border-red-500');
+            }
+        }; 
+
         $(document).ready(function() {
             // Auto-completion
             var communeNames = [
