--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -70,7 +70,7 @@
          
          <li>
             <a href="#"
-               class="flex items-center p-2 text-zinc-600 transition duration-75 rounded-lg hover:bg-gray-100 font-normal dark:hover:bg-sky-100 text-neutral-900 group transition duration-300">
+               class="flex items-center p-2 text-zinc-600 rounded-lg hover:bg-gray-100 font-normal dark:hover:bg-sky-100 text-neutral-900 group transition duration-300">
                <svg
                   class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 text-zinc-600 group-hover:text-neutral-900 dark:group-hover:text-zinc-600"
                   aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 21 21">
